Fix for IE in registration page, where in it was showing 2 scrollbars and was not allowing to click on ToS

--- a/app/scss/3-views/global-views.scss
+++ b/app/scss/3-views/global-views.scss
@@ -1,7 +1,9 @@
 /*
 Global layout styles
 */
-
+.snap-content{
+  overflow:inherit;
+}
 .cui-breadcrumb__link {
   .cui-breadcrumb__route {
     font-size: 0.75em !important;
